--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,1 +1,91 @@
+@import '../css/themes/common.variables.styl';
+
 // app global css
+.display-flex-col
+  display flex
+  flex-direction column
+
+.display-flex-row
+  display flex
+  flex-direction row
+
+.expanding-container-col
+  @extend .display-flex-col
+  flex 1 1 auto
+
+.non-expanding-container-col
+  @extend .display-flex-col
+  flex 0 0 auto
+
+.expanding-container-row
+  @extend .display-flex-row
+  flex 1 1 auto
+
+.flex-auto
+  flex 1 1 auto
+
+.flex-base
+  flex 1 1 0
+
+.flex-auto-no-grow
+  flex 0 0 auto
+
+.justify-content-center
+  justify-content center
+
+.align-items-center
+  align-items center
+
+.align-self-center
+  align-self center
+
+.padding-left-small
+  padding-left 10px
+
+.padding-right-small
+  padding-right 10px
+
+.padding-left-medium
+  padding-left 20px
+
+.padding-right-medium
+  padding-right 20px
+
+.margin-top-medium
+  margin-top 20px
+
+.margin-left-medium
+  margin-left 20px
+
+.margin-right-medium
+  margin-right 20px
+
+.margin-medium
+  margin 20px
+
+.no-margin
+  margin 0
+
+.position-relative
+  position relative
+
+.color-primary
+  color $color-primary
+
+.color-primary-light
+  color $color-primary-light
+
+.color-primary-dark
+  color $color-primary-dark
+
+.color-secondary
+  color $color-secondary
+
+.color-secondary-light
+  color $color-secondary-light
+
+.color-secondary-dark
+  color $color-secondary-dark
+
+.color-white
+  color #FFF
